updating file based on newline changes from latest lxml

--- a/data/test/nytimes-index-clean.html
+++ b/data/test/nytimes-index-clean.html
@@ -1510,8 +1510,8 @@ Delivery" align="middle" border="0">Get 50% Off The New York Times &amp; Free Al
 </div>
 </div>
 </div>
-<footer class="pageFooter"><div class="inset">
-<nav class="pageFooterNav"><ul class="pageFooterNavList wrap">
+<div class="inset">
+<ul class="pageFooterNavList wrap">
 <li class="firstItem"><a href="http://www.nytco.com/">© 2013 The New York Times Company</a></li>
 <li><a href="http://spiderbites.nytimes.com/">Site Map</a></li>
 <li><a href="http://www.nytimes.com/privacy">Privacy</a></li>
@@ -1524,9 +1524,8 @@ Delivery" align="middle" border="0">Get 50% Off The New York Times &amp; Free Al
 <li><a href="http://www.nytimes.com/membercenter/sitehelp.html">Help</a></li>
 <li><a href="http://www.nytimes.com/ref/membercenter/help/infoservdirectory.html">Contact Us</a></li>
 <li class="lastItem"><a href="/membercenter/feedback.html">Site Feedback</a></li>
-</ul></nav>
+</ul>
 </div>
-</footer>
 </div>
 </div>
 <img class="hidden" src="/adx/bin/clientside/1b9f0cedQ2FlllSJtGAjtQ22lAhtDyQ7E_iQ22otUmiQ7DQ60Q2FQ22SQ60hbQ60hJkSMkQ7D3Q2F" height="1" width="3"><img height="1" width="3" border="0" src="http://up.nytimes.com/?d=0/1/&amp;t=1&amp;s=0&amp;ui=&amp;r=&amp;u=www%2enytimes%2ecom%2f%3f"><noscript>
